--- a/02_Greenhouse_Trials.Rmd
+++ b/02_Greenhouse_Trials.Rmd
@@ -36,9 +36,13 @@ Next, initialize folders and load the data
 ```{r}
 
 data_dir <- file.path("./02_Greenhouse/data")
-biomass <- read.csv(file.path(data_dir, "Biomass.csv")) %>% 
+biomass <- read_csv(file.path(data_dir, "greenhouse_raw.csv"), col_types = NULL)
   dplyr::mutate(Soil_Type = factor(Soil_Type, levels = c("Invaded", "Pristine")),
-                Soil_Treatment = factor(Soil_Treatment, levels = c("Con", "AC", "Ash")))
+                Soil_Treatment = factor(Soil_Treatment, levels = c("Con", "AC", "Ash")), 
+                AboveMass = ifelse(AboveMass == 0.001, 0, AboveMass),
+                BelowMass = ifelse(BelowMass == 0.001, 0, BelowMass),
+                TotalMass = AboveMass + BelowMass) %>% 
+  dplyr::select(Soil_Type, Soil_Treatment, Species, TotalMass)
 
 ```
 
@@ -117,6 +121,7 @@ interactions <- sapply(unique(biomass_summary$Species), function(x) {
       legend.title = element_text(face = "bold"),
       axis.text = element_text(colour = "black"),
       axis.ticks.x = element_blank(),
+      axis.ticks.y = element_line(size = 1, linetype = "solid", colour = "black"),
       axis.title = element_text(face = "bold", size = 16),
       axis.title.y = element_text(margin = margin(t = 0, 10, 0, 0)),
       axis.line = element_line(size = 1),
@@ -136,7 +141,8 @@ interactions <- sapply(unique(biomass_summary$Species), function(x) {
 }, simplify = FALSE, USE.NAMES = TRUE)
 
 #Now join those 2 graphs together
-interactions <- ggarrange(plotlist = interactions, common.legend = TRUE, legend = "bottom")
+interactions <- ggarrange(plotlist = interactions, common.legend = TRUE, legend = "bottom") +
+  ggsave(filename = file.path(data_dir, "interactions.png"), width = 6, height = 3, dpi = 300)
 #Export image at 600px wide x 300px tall
 
 ```
@@ -205,6 +211,7 @@ biomass_plot <- sapply(unique(biomass_summary$Species), function(x) {
       panel.grid.minor = element_blank(),
       axis.text = element_text(colour = "black"),
       axis.ticks.x = element_blank(),
+      axis.ticks.y = element_line(size = 1, linetype = "solid", colour = "black"),
       axis.title = element_text(face = "bold", size = 16),
       axis.title.y = element_text(margin = margin(t = 0, 10, 0, 0)),
       axis.line = element_line(size = 1),
@@ -235,6 +242,28 @@ final <- biomass_plot +
   ggsave(file.path(data_dir, "bmass_with_images.png"), width = 6, height = 3, dpi = 300)
 
 ```
+
+I need to do some stuff with survival of the planted greenhouse plants as well:
+
+```{r}
+
+surv <- read_csv(file.path(data_dir, "greenhouse_raw.csv"), col_types = NULL) %>% 
+  dplyr::select(-c(AboveMass, BelowMass, Rep)) %>% 
+  dplyr::mutate(Soil_Type = factor(Soil_Type, levels = c("Invaded", "Pristine")),
+                Soil_Treatment = factor(Soil_Treatment, levels = c("Con", "AC", "Ash")), 
+                germ_rat = Germinants / 5, 
+                deaths = Germinants - Survival, 
+                trial_surv = Survival / 5, 
+                germ_surv = ifelse(Survival == 0 & Germinants == 0, 0, 
+                                   Survival / Germinants))
+
+surv_summary <- group_by(surv, Soil_Type, Soil_Treatment, Species) %>% 
+  summarise(across(c(germ_rat, deaths, trial_surv, germ_surv), 
+                   list(mean = mean, se = ~sd(.x) / sqrt(n()))), .groups = "drop")
+
+```
+
+
 
 Shifting gears to the elemental analyzer data now:
 
@@ -277,62 +306,74 @@ analyzer_plots <- sapply(elements, function(x) {
     dplyr::select(-data) %>% 
     merge(df_summary)
   
-  p <- ggplot(df_summary, aes(Soil_Type, mean, fill = Soil_Treatment)) + 
-    geom_bar(stat = "identity", position = "dodge", colour = "black", size = 1) +
-    geom_errorbar(aes(ymin = mean - se, ymax = mean + se), 
-                  size = 1, width = 0.3, position = position_dodge(0.9)) +
-    xlab("Soil Site")+
-    ylab(paste0("Total ", x, " (%)")) +
-    theme_classic(base_size = 16) +
+  # Used to produce bar plots but not useful, boxplot more interpretable
+  # p <- ggplot(df_summary, aes(Soil_Type, mean, fill = Soil_Treatment)) + 
+  #   geom_bar(stat = "identity", position = "dodge", colour = "black", size = 1) +
+  #   geom_errorbar(aes(ymin = mean - se, ymax = mean + se), 
+  #                 size = 1, width = 0.3, position = position_dodge(0.9)) +
+  #   xlab("Soil Site")+
+  #   ylab(paste0("Total ", x, " (%)")) +
+  #   theme_classic(base_size = 16) +
+  #   theme(
+  #     text = element_text(family = "Times New Roman"),
+  #     legend.position = c(0.18, 0.88), 
+  #     legend.background = element_rect(
+  #       fill = "white", size = 1,linetype = "solid", colour = "black"),
+  #     legend.title = element_text(face = "bold", size = 18),
+  #     panel.grid.major = element_blank(),
+  #     panel.grid.minor = element_blank(),
+  #     axis.text = element_text(colour = "black"),
+  #     axis.ticks.x = element_blank(),
+  #     axis.title = element_text(face = "bold", size = 18)) + 
+  #   scale_fill_manual(
+  #     values = c("dimgray", "darkgray", "gainsboro"),
+  #     breaks = c("AC","Ash","Con"),
+  #     labels = c("Activated Carbon", "Ash", "Control"),
+  #     name = "Soil Amendment") +
+  #   scale_y_continuous(
+  #     expand = c(0, 0), 
+  #     limits = c(0, max(ceiling(df_summary$mean)))) +
+  #   scale_x_discrete(labels = c(Invaded = "Invaded", Pristine = "Pristine")) +
+  #   geom_text(aes(label = groups, y = mean + se), position = position_dodge(0.9), 
+  #             vjust= -0.5, family = "serif", size = 5)
+  
+  p <- ggplot(df, aes(Soil_Type, data, fill = Soil_Treatment)) +
+    geom_boxplot(lwd = 0.6, color = "black", width = 1) +
+    xlab("Soil Site") +
+    ylab(paste0("Total ", x, " (%)"))  +
+    theme_classic(base_size = 14) +
     theme(
-      text = element_text(family = "Times New Roman"),
-      legend.position = c(0.18, 0.88), 
+      text = element_text(family="Times New Roman"), 
+      legend.position = c(0.18, 0.88),
       legend.background = element_rect(
-        fill = "white", size = 1,linetype = "solid", colour = "black"),
-      legend.title = element_text(face = "bold", size = 18),
+        fill = "white", size = 1, linetype = "solid", colour = "black"),
+      legend.title = element_text(face = "bold",size = 16), 
       panel.grid.major = element_blank(),
       panel.grid.minor = element_blank(),
       axis.text = element_text(colour = "black"),
       axis.ticks.x = element_blank(),
-      axis.title = element_text(face = "bold", size = 18)) + 
+      axis.ticks.y = element_line(size = 1, linetype = "solid", colour = "black"),
+      axis.title = element_text(face = "bold",size = 16),
+      axis.title.y = element_text(margin = margin(t = 0, 10, 0, 0)),
+      axis.line = element_line(size = 1)) +
     scale_fill_manual(
-      values = c("dimgray", "darkgray", "gainsboro"),
-      breaks = c("AC","Ash","Con"),
-      labels = c("Activated Carbon", "Ash", "Control"),
+      values = c("gray99", "gray66", "gray33"),
+      breaks = c("AC", "Ash", "Con"),
+      labels = c("Control", "Activated Carbon", "Ash"), 
       name = "Soil Amendment") +
-    scale_y_continuous(expand = c(0, 0), limits = c(0, max(ceiling(df$data))))+
-    scale_x_discrete(labels = c(Invaded = "Invaded", Pristine = "Pristine")) +
-    geom_text(aes(label = groups, y = mean + se), position = position_dodge(0.9), 
-              vjust= -0.5, family = "serif", size = 5)
-  
-  p2 <- ggplot(df, aes(Soil_Type, data, fill = Soil_Treatment)) +
-  geom_boxplot(lwd = 0.6, color = "black", width = 1) +
-  xlab("Soil Site") +
-  ylab(paste0("Total ", x, " (%)"))  +
-  theme_classic(base_size = 14) +
-  theme(
-    text = element_text(family="Times New Roman"), 
-    legend.position = c(0.18, 0.88),
-    legend.background = element_rect(
-      fill = "white",size = 1,linetype = "solid", colour = "black"),
-    legend.title = element_text(face = "bold",size = 16), 
-    panel.grid.major = element_blank(),
-    panel.grid.minor = element_blank(),
-    axis.text = element_text(colour = "black"),
-    axis.ticks.x = element_blank(),
-    axis.title = element_text(face = "bold",size = 16),
-    axis.title.y = element_text(margin = margin(t = 0, 10, 0, 0)),
-    axis.line = element_line(size = 1)) +
-  scale_fill_manual(
-    values = c("gray99", "gray66", "gray33"),
-    breaks = c("AC", "Ash", "Con"),
-    labels = c("Control", "Activated Carbon", "Ash"), 
-    name = "Soil Amendment") +
-  scale_x_discrete(labels = c(INV = "Invaded", PRI = "Pristine")) +
-  scale_y_continuous(expand = c(0, 0), limits = c(min(floor(df$data)), max(ceiling(df$data))))
+    scale_x_discrete(labels = c(INV = "Invaded", PRI = "Pristine")) +
+    scale_y_continuous(
+      expand = c(0, 0), 
+      limits = c(
+        ifelse(max(df$data) < 1 | max(df$data) - min(df$data) < 1, 
+               round(min(df$data) - 0.1, digits = 1), min(floor(df$data))),
+        ifelse(max(df$data) < 1 | max(df$data) - min(df$data) < 1, 
+               round(max(df$data) + 0.1, digits = 1), max(ceiling(df$data)))))
 }, simplify = FALSE, USE.NAMES = TRUE)
 
-final <- ggarrange(plotlist = analyzer_plots, common.legend = TRUE, legend = "bottom")
+# Arrange final plot of carbon and nitrogen only
+final <- ggarrange(plotlist = analyzer_plots[2:1], common.legend = TRUE, legend = "bottom") +
+  ggsave(filename = file.path(data_dir, "CN_plot.png"), width = 6, height = 3, dpi = 300)
 
 ```
 
